[package]
name = "body_weight_meter"
version = "0.1.0"
authors = ["Index197511 <hiro.saten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2"
actix-web = { version = "1.0.0", features=["ssl"] }
env_logger = "0.6"
openssl = { version = "0.10" }
sled = "0.27"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
ctrlc = "3.1.3"
